[gd_scene load_steps=9 format=3 uid="uid://dn6r2gj0hkuyg"]

[ext_resource type="Script" uid="uid://bqg3m6qcv866y" path="res://scripts/Crupie.gd" id="1_epypp"]
[ext_resource type="Script" uid="uid://d4lbvo3aejbhc" path="res://scripts/Mao.gd" id="1_wtcfe"]
[ext_resource type="Script" uid="uid://b4au471djlu2d" path="res://scripts/button.gd" id="2_0e48y"]
[ext_resource type="Script" uid="uid://vnae6dd5h65f" path="res://scripts/DropZone.gd" id="3_4vge2"]
[ext_resource type="Script" uid="uid://der2073ngowuk" path="res://scripts/StackRespostas.gd" id="3_j7wrs"]
[ext_resource type="Script" uid="uid://dknix3j0vln4b" path="res://scripts/StackTestadores.gd" id="4_j7wrs"]

[sub_resource type="Curve" id="Curve_0e48y"]
_data = [Vector2(0, 0), 0.0, 5.64422, 0, 0, Vector2(0.498403, 1), 8.29167e-07, 8.29167e-07, 0, 0, Vector2(0.980831, 0.0257987), -5.68407, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_epypp"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, -1), 0.0, 3.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 3.0, 0.0, 0, 0]
point_count = 3

[node name="Node2D" type="Node2D"]

[node name="Crupie" type="Node" parent="."]
script = ExtResource("1_epypp")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="." groups=["dropplace"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -474.0
offset_top = -281.0
offset_right = -323.0
offset_bottom = -77.0
mouse_filter = 2
script = ExtResource("3_4vge2")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 75.5
offset_top = 102.0
offset_right = 75.5
offset_bottom = 102.0
mouse_filter = 2
theme_override_constants/separation = 20
script = ExtResource("3_j7wrs")
filter = Array[int]([13, 14, 15, 16, 17, 18])

[node name="Control4" type="Control" parent="." groups=["dropplace"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -200.0
offset_top = -281.0
offset_right = -49.0
offset_bottom = -77.0
mouse_filter = 2
script = ExtResource("3_4vge2")

[node name="ColorRect" type="ColorRect" parent="Control4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("4_j7wrs")
filter = Array[int]([12])

[node name="Mao" type="Node2D" parent="."]
position = Vector2(0, 167)
script = ExtResource("1_wtcfe")
hand_curve = SubResource("Curve_0e48y")
rotation_curve = SubResource("Curve_epypp")
x_sep = 0
hand_size = 600
metadata/_custom_type_script = "uid://d4lbvo3aejbhc"

[node name="Control" type="Control" parent="Mao" groups=["dropplace"]]
layout_mode = 3
anchors_preset = 0
offset_left = -445.0
offset_top = -132.0
offset_right = 469.0
offset_bottom = 205.0
script = ExtResource("3_4vge2")

[node name="Node2D" type="Node2D" parent="Mao"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 420.0
offset_top = -316.0
offset_right = 567.0
offset_bottom = -100.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "draw"
script = ExtResource("2_0e48y")

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "shuffle"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "puxar per"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "terminar turno"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "flip res"

[connection signal="cartaposta" from="Control" to="Control/VBoxContainer" method="_on_Cartaposta"]
[connection signal="cartaposta" from="Control4" to="Control4/VBoxContainer" method="_on_Cartaposta"]
[connection signal="child_exiting_tree" from="Mao" to="Mao" method="_on_child_exiting_tree"]
[connection signal="cartaposta" from="Mao/Control" to="Mao" method="_on_control_cartaposta"]
[connection signal="child_exiting_tree" from="Mao/Node2D" to="Mao" method="_on_node_2d_child_exiting_tree"]
[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="VBoxContainer/Button" method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="VBoxContainer/Button" method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="VBoxContainer/Button" method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="VBoxContainer/Button" method="_on_button_5_pressed"]
